Fixing Overflow X bug

--- a/style.css
+++ b/style.css
@@ -32,10 +32,10 @@
   scroll-behavior: smooth;
 }
 
-html,
+/* html,
 body {
   overflow-x: hidden;
-}
+} */
 
 body {
   background: url("/assets/alexander-popov-R25Q-pAUeY8-unsplash.jpg") no-repeat
@@ -196,6 +196,7 @@ body {
     background: url("./assets/alexander-popov-R25Q-pAUeY8-unsplash.jpg")
       no-repeat 30% -15%;
     overflow-x: hidden;
+    max-width: 768px;
   }
 
   .main-container {
